# puter

./: .gitignore  .profile  Cargo.toml  Dockerfile  LICENSE.md  README.md  lol.janjic.puter.metainfo.xml  lol.janjic.puter.yml  puter.mo
.github/workflows/: build.yml  flatpak-aarch64.yml  flatpak.yml
app/share/locale/sr/LC_MESSAGES/: puter.mo
flatpak-build/share/applications/: lol.janjic.puter.desktop
po/: puter.pot
po/sr/: puter.po
po/sr_RS/LC_MESSAGES/: puter.po
src/: localization.rs  main.rs  styles.rs
src/data/: mod.rs
src/ui/: lists_view.rs  mod.rs  new_list_view.rs
