[package]
name = "puter"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
adw = { version = "0.5", package = "libadwaita" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gettext-rs = "0.7"