[package]
name = "puter"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.6", package = "gtk4" }
adw = { version = "0.7.1", package = "libadwaita" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gettext-rs = "0.7"
dirs = "6.0"
gettext = "0.4.0"
locale = "0.2"
glib = "0.10.0"